fixed navbar from overlapping header on resize

--- a/G26/style/base.css
+++ b/G26/style/base.css
@@ -8,6 +8,7 @@ html {
 header {
 	height: 105px;
 	width: 100%;
+	min-width: 1200px;
 	position: fixed;
 	top: 0;
 	background-color: white;
@@ -81,7 +82,8 @@ a {
 nav {
 	float: right;
 	position: relative;
-	top: 32px;
+	margin-top: 30px;
+	/**top: 32px; */
 	display: -webkit-flex;
 	display: flex;
 	-webkit-flex-direction: row;
