--- a/G26/style/index.css
+++ b/G26/style/index.css
@@ -61,7 +61,7 @@ body p {
 
 #homecontentbg {
 	background-color: rgba(255,255,255,0.98);
-	height: 100%;
+	height: 470px;
 	z-index: -5;
 	margin-bottom: 0;
 }
@@ -131,6 +131,15 @@ table a:hover{
 	filter: grayscale(0);
 }
 
+#pagetext {
+	height: 360px;
+	font-size: 16px;
+	overflow: hidden;
+	min-width: 450px;
+}
+
+
+
 
 .parallax2 {
 	position: relative;
@@ -163,7 +172,7 @@ table a:hover{
     margin: -10px 0 0 25px; 
     padding: 0;
     position: relative;
-    height: 200px;
+    height: 100px;
     width: 200px;
 }
 
